# ChangeLog for x11-libs/gtkglext
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtkglext/ChangeLog,v 1.100 2015/06/26 09:24:11 ago Exp $

  26 Jun 2015; Agostino Sarubbo <ago@gentoo.org> gtkglext-1.2.0-r3.ebuild:
  Stable for x86, wrt bug #551814

  21 Jun 2015; Mikle Kolyada <zlogene@gentoo.org> gtkglext-1.2.0-r3.ebuild:
  amd64 stable wrt bug #551814

  21 Jun 2015; Jeroen Roovers <jer@gentoo.org> gtkglext-1.2.0-r3.ebuild:
  Stable for PPC64 (bug #551814).

*gtkglext-1.2.0-r3 (15 Mar 2015)

  15 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
  gtkglext-1.2.0-r2.ebuild, +gtkglext-1.2.0-r3.ebuild,
  +files/gtkglext-1.2.0-gl-configure.patch:
  Fix broken multilib gl and glu detection (bug #543050, thanks to Bertrand
  Jacquin). Update license.

  21 Nov 2014; Pacho Ramos <pacho@gentoo.org> -gtkglext-1.2.0-r1.ebuild:
  Drop old

  11 Oct 2014; Markus Meier <maekke@gentoo.org> gtkglext-1.2.0-r2.ebuild:
  arm stable, bug #512012

  15 Sep 2014; Agostino Sarubbo <ago@gentoo.org> gtkglext-1.2.0-r2.ebuild:
  Stable for sparc, wrt bug #512012

  25 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gtkglext-1.2.0-r2.ebuild:
  Stable for alpha, wrt bug #512012

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gtkglext-1.2.0-r2.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gtkglext-1.2.0-r2.ebuild:
  Stable for ppc64, wrt bug #512012

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> gtkglext-1.2.0-r2.ebuild:
  Stable for HPPA (bug #512012).

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gtkglext-1.2.0-r2.ebuild:
  Stable for ppc, wrt bug #512012

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gtkglext-1.2.0-r2.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gtkglext-1.2.0-r2.ebuild:
  Stable for amd64, wrt bug #512912

  24 Jun 2014; Michał Górny <mgorny@gentoo.org> gtkglext-1.2.0-r2.ebuild: