@@ -13,24 +13,14 @@ EBUILD gtksourceview-2.10.5-r2.ebuild 1867 SHA256 4d2893a823261005ef47b1217c7adf
 EBUILD gtksourceview-2.10.5-r3.ebuild 1561 SHA256 28c2d2656a41980d1b6fe6bd60fcb434b3561846fda1f4972e7b7b4d3a31c0f0 SHA512 aeec6a18a3c2fec4d0ffa14ff33bfdc51eca2c883d6732dc043030a74dc81ecf12dc9fb05eaa2b1b94939b0a8ef7616bf402794da1b43ba5287594b95e68fcf3 WHIRLPOOL 6d6e6386142245a1f9782abcc6d774db5e9c7f7bb0094dfb85ad1f2e96b101161f8865428a6d091023066eb3d31a80b8f39c23639fba2f9681665ab7c68598a3
 EBUILD gtksourceview-3.12.3.ebuild 1378 SHA256 acf67cb9474ce714fb6867dcc60b5815103d23fb8764e18f24191dbb2d1b7a88 SHA512 37ff0cd815512f516a849a434b94142e49c4e7b05564f8c01c7f5685e93fdaaa3b3dd02717f5dc9d76be80c8dfb9229738c6d20daa80cf0a0d451ec5d4bead75 WHIRLPOOL 34cec72841f5950b23d5b75e5f24fb5cc66b75e3a2f85eb11763dc8125e5e1347a1383f4b0bc98bbfe2f0f37289b06468b48cc7dc8c102661e7155d377f2ec37
 EBUILD gtksourceview-3.14.3.ebuild 1606 SHA256 9fdfffe8b0f273e8cd9eab069c6eab93329a8f240c442a064539233565f15a5f SHA512 a57101b0d9fe6c75a5919e0a4d773c8d68c8b1d0a887f04afb5f5300811d3ea3b59c51f8b0a07e953d3ff48ffda63bc291c20bfac07a3bdb3b27121d27218ac4 WHIRLPOOL cb35f3958b3ef48ed30f1fa04b5f46503466cf617f1586bc9a5c94c854048ae8648acb235647bb73367cb98999fffe47dfd48851be76c00abd7fcae808714558
-EBUILD gtksourceview-3.14.4.ebuild 1605 SHA256 c839d6f553a68849f8b0177f8107447543f61d301586b60d89c7832d07b28cb9 SHA512 5112ffd3bf2139d7c718967ebc9ddd6dd2710d701266292c135a1709df1b55e564d45fef8d3f1be43a59f97de60b8fdf87a3fb24236b6fd3b3354887351d3023 WHIRLPOOL 7db2eb312f9f31e8444d3853dd8de63df9a4681c058d15d74820d9d6b2b9853fde504da49fc6ffe5a791d62ad2cf66bf13bb86ad08458a83145089ebbd6cb3ea
+EBUILD gtksourceview-3.14.4.ebuild 1607 SHA256 e9d4884a920dcdcfc24618f3136a71eae67df38d6b46ef2ed2ad30025853c2a0 SHA512 d631e8d260ee263459e8b69d32c638d3f244bd4f4471959b29e038e31cbf3acbbaa959199ba0fd56306ce298c66ea7f6d802d4cff8e485b7b6dbc8f7a76438b7 WHIRLPOOL 39a34ea510847d5b074038a7d0d02cd0075a4157a74e453f7b4b1f62f890d33ea3c0e35f9508e554440eecbeb4f01c89636c704bba3680326cc1e2e9e7ad3476
 EBUILD gtksourceview-3.16.1.ebuild 1611 SHA256 d0ce55d589b02bae971fa74507189f55170f806da3cb4f5513e2741947b08416 SHA512 7e94c3641abc8ae6122ee5e5d84978efea330fa4c4b077d1aaa20167926cade6eefa1c2e0866d6560d23f5d3e2931835689030ec4eee56db4f8d8e616577d3f4 WHIRLPOOL 1e819d9d4fdaca2f5d85e3fa8aa9ca34fb86eeb6f161cea41c2d6ed8e7528e8958ca2c0e30d84d333297db25ad9f830849e1d38b04763d2b5fb703c8051c4480
-MISC ChangeLog 39702 SHA256 6797388d87c2836b74477a9c742d736a2f20361c8c7a3300b232e1b9c473e257 SHA512 60ad41c73e271c7d07393bbe4c939304fe99a279fcb7ee9ca346e7fe0d60e8dcf9d8ec5247c10d910caa95c4bc91ac97163a4d56dba3b66cf44cb0585f6c2755 WHIRLPOOL 3b55fbd85b45c6edb4ab58c29af9b44749ce9fd8066c1ae748edeff6e549b33396d5f85ed07541ff262e99a4fd15e760c6792adf1b441073c8a74bc835b3387e
+MISC ChangeLog 39809 SHA256 5b3b2c5bea5b570ed2e919387584e3cc473b9f449b90a593c347a80798e664e8 SHA512 9b3d5a8f287cf1c9af2ee2c2d080eb8b4292745e9406627eebedfe38b131a9adfe54060c1e27c0279d7511dd2be30ceb47e62a609c3e6a8ac87ac826059c3bd6 WHIRLPOOL 0feee9f46bbbb653c0c11fe8bb3793d264873f6bddd57604d6c0c6c55c688a52797289f0d648b452537e5922e775516ea1750efc1fdcc0e15ee5499e07e76ab2
 MISC metadata.xml 227 SHA256 acf49718ac71aa3c7bfc3da7369c982c571f85885ef7cb787f5449049bf7a358 SHA512 ef662434f41abe6311571701ffa1dbadd0696e221c04c1e9bf54b48145083f940356a62d32b2af94cb64461e63e93cf0f9f8d454173edd940d7c9a47e834f721 WHIRLPOOL 43b6dc1bd6304afdb47215f375fc1dde8e8fdc2efca7ad8db6b5c4bae3b88f11569d6b5d3cb63841fe044e2921999aedd55e672d59ab302d8a561e6f037edb60
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIbBAEBCAAGBQJVjRo/AAoJELp701BxlEWftLYP+L8oJeq23XqPXe/5rLeRWhiq
-APmYA5Jy7hghUEo1REDdygll1oOG7fZhlKt73gEYZUDh2WC6jPHXxEHOj7gx3vt3
-Y0sFAXLgiUMf+EQwESSPCt0rLz3DDZmwU9zcm1uX11PCda566uthJh0WmGXgoM1t
-9zMzGwH8rQNSjxPp3ZWFl0JZ0GXN6IZm1sClK5mqqhIQJVwwu6WN/ajc6EIl/lgs
-IQM+/u6okeIa7YTYLMXiZPBFH+RM42K4gT5ka9GLQxEO18x2kYtiGEe4KTNkLphY
-U+bOy46zSKhuS3/HGLWi9Qk9hT/U7CeqvpB+Q75LtBDObWvNkATb4bWYmdfd/HEd
-LdF2HftViONqXSNz9PsZXJvG1e9N1oskLnCF1HzZaR9dnW/6sHdVOGiqyVe33CpS
-II1lxOmnHMQ/Ci10Rch7VVNYSUmlDhsqi9d+L6WExpFP8yI8W3ccs70wNR8f9nnA
-qdE0lPMUUK5+Kq7b2hda3ZmZ6hVW5r8sSIwVouoq+wNctPEkRub0/3rOWlcfz70a
-uradSYmcCjgfnZ7/AldxQwt0RzjBB4t1edtuPcVBi9Msi1W33zWlfoJQV+KP3mRY
-r2TPSb349tBbfZN7vXfOX5OSvOv7JIGSZNiARKymlKNmQ/Na3u0I8Fr6alg7+uEh
-wiHJygQpe/xlJ2aMkS8=
-=jjZI
+iEYEAREIAAYFAlWcPIAACgkQkKaRLQcq0GKKOACfTCb3KO3D/W3/lUN+FRkKkgn9
+IqAAoLEqyOLKDyzxaBTp1uaezZAMBzgf
+=/8eV
 -----END PGP SIGNATURE-----
