@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/gtksourceview
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.292 2015/06/26 09:24:14 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.293 2015/07/07 20:54:21 maekke Exp $
+
+  07 Jul 2015; Markus Meier <maekke@gentoo.org> gtksourceview-3.14.4.ebuild:
+  arm stable, bug #551814
 
   26 Jun 2015; Agostino Sarubbo <ago@gentoo.org> gtksourceview-2.10.5-r3.ebuild,
   gtksourceview-3.14.4.ebuild:
